# chaosvector-speaker

./: .gitignore  CLAUDE.md  README.md  UPSTREAM-CHANGES.md  pyproject.toml
src/chaosvector_speaker/: __init__.py  __main__.py  embedder.py  enroll.py  verifier.py  wyoming_server.py
